Use travis provided sbt and databases where possible to speed up build